Bug 1356293 - Make touch and wheel events without non-passive listeners uncancelable. r=dom-core,edgar

According to the spec https://w3c.github.io/touch-events/#cancelability,
the touchstart, touchend and touchmove events should be uncancelable if
there are no non-passive listeners.

According to https://w3c.github.io/uievents/#cancelability-of-wheel-events,
this also holds for wheel events.

Differential Revision: https://phabricator.services.mozilla.com/D218199