dom/events/EventListenerManager.h
@@ -508,6 +508,8 @@ class EventListenerManager final : public EventListenerManagerBase {
    */
   bool HasListenersFor(nsAtom* aEventNameWithOn) const;
 
+  bool HasNonPassiveListenersFor(const WidgetEvent* aEvent) const;
+
   /**
    * Similar to HasListenersFor, but ignores system group listeners.
    */
@@ -749,8 +751,8 @@ class EventListenerManager final : public EventListenerManagerBase {
   nsPIDOMWindowInner* GetInnerWindowForTarget();
   already_AddRefed<nsPIDOMWindowInner> GetTargetAsInnerWindow() const;
 
-  bool ListenerCanHandle(const Listener* aListener, const WidgetEvent* aEvent,
-                         EventMessage aEventMessage) const;
+  bool ListenerCanHandle(const Listener* aListener,
+                         const WidgetEvent* aEvent) const;
 
   // BE AWARE, a lot of instances of EventListenerManager will be created.
   // Therefor, we need to keep this class compact.  When you add integer
